[package]
name             = "fixedbitset-utils"
version          = "0.2.0"
authors          = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition          = "2021"
description      = "A bunch of utility stuffs that I use when working with bitsets in Rust."
repository       = "https://github.com/xgillard/bitset-fixed-utils"
license          = "MIT"
keywords         = ["bitset", "utils",]
categories       = ["algorithms"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixedbitset = "0.1.0"